--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: black;
     display:flex;
-    align-item:center;
+    align-items:center;
     justify-content:center;
 }
 
